[package]
name = "nanoid"
version = "0.4.0"
authors = ["Nikolay Govorov <nikolay_govorov@bk.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nikolay-govorov/nanoid.git"
documentation = "https://docs.rs/nanoid"
homepage = "https://github.com/nikolay-govorov/nanoid"
description = "A tiny, secure, URL-friendly, unique string ID generator for Rust."
keywords = ["uuid", "random", "id", "url"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "CHANGELOG.md"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }
appveyor = { repository = "nikolay-govorov/nanoid", branch = "master", service = "github" }
travis-ci = { repository = "nikolay-govorov/nanoid", branch = "master" }

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
smartstring = { version = "1.0.1", optional = true }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["prepush-hook", "precommit-hook", "postmerge-hook", "run-cargo-test", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }
doc-comment = "0.3"

[features]
default = []
