[package]
name = "nanoid"
version = "0.5.0"
authors = ["Nikolay Govorov <me@govorov.online>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mrdimidium/nanoid.git"
documentation = "https://docs.rs/nanoid"
homepage = "https://github.com/mrdimidium/nanoid"
description = "A tiny, secure, URL-friendly, unique string ID generator for Rust."
keywords = ["uuid", "random", "id", "url"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "CHANGELOG.md"]
edition = "2018"

[dependencies]
rand = "0.9"
smartstring = { version = "1.0.1", optional = true }

[dev-dependencies]
criterion = "0.8"
doc-comment = "0.3"

[features]
default = []

[[bench]]
name = "rngs"
harness = false
